# SupportCenter

./: README.md
src/: autobuild_example  main.build  main.sln
src/NetworkLayer/JabberClient/gloox-0.8.6/: ChangeLog  Makefile.am  Makefile.in  Output-Build.txt  README.win32  TODO  aclocal.m4  config.h.in  config.h.win  config.h.win.bak  configure  configure.ac  gloox-0.8.6.build  gloox-0.8.6.build.bak  gloox-0.8.6.vcproj  gloox.dev  gloox.dsp  gloox.pc.in
src/NetworkLayer/JabberClient/gloox-0.8.6/public/: client.h  connectionlistener.h  disco.h  disconodehandler.h  gloox.h  jid.h  logsink.h  messagehandler.h  messagesession.h  messagesessionhandler.h  presencehandler.h  rosterlistener.h  rostermanager.h  stanza.h  subscriptionhandler.h  tag.h
src/NetworkLayer/JabberClient/gloox-0.8.6/src/: Makefile.am  Makefile.in  adhoc.cpp  adhoc.h  adhoccommandprovider.h  annotations.cpp  annotations.h  annotationshandler.h  base64.cpp  base64.h  bookmarkhandler.h  bookmarkstorage.cpp  bookmarkstorage.h  chatstatefilter.cpp  chatstatefilter.h  chatstatehandler.h  client.cpp  clientbase.cpp  clientbase.h  component.cpp  component.h  compression.cpp  compression.h  connection.cpp  connection.h  dataform.cpp  dataform.h  dataformbase.cpp  dataformbase.h  dataformfield.cpp  dataformfield.h  dataformitem.h  dataformreported.h  disco.cpp  discohandler.h  dns.cpp  dns.h  flexoff.cpp  flexoff.h  flexoffhandler.h  (+50 more)
src/NetworkLayer/JabberClient/gloox-0.8.6/src/tests/: Makefile.am  Makefile.in  adhoc_test.cpp  annotations_test.cpp  bookmarkstorage_test.cpp  component_test.cpp  disco_test.cpp  flexoff_test.cpp  ibb_test.cpp  message_test.cpp  privacylist_test.cpp  privatexml_test.cpp  register_test.cpp  roster_test.cpp  vcard_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/: ChangeLog  Doxyfile  INSTALL  Makefile.am  Makefile.in  README  README.win32  TODO  aclocal.m4  config.h.in  config.h.win.bak  configure  configure.ac  gloox-0.9.build  gloox-0.9.vcproj  gloox-config.in  gloox.cbp  gloox.dsp  gloox.pc.in
src/NetworkLayer/JabberClient/gloox-0.9/public/: client.h  clientbase.h  connectionbase.h  connectiondatahandler.h  connectionlistener.h  connectiontcpbase.h  disconodehandler.h  jid.h  macros.h  mutex.h  privatexmlhandler.h  rosteritem.h  stanza.h  statisticshandler.h  subscriptionhandler.h  taghandler.h  tlshandler.h
src/NetworkLayer/JabberClient/gloox-0.9/src/: Makefile.am  Makefile.in  adhoc.cpp  adhoc.h  adhoccommandprovider.h  adhochandler.h  annotations.cpp  annotations.h  annotationshandler.h  base64.cpp  base64.h  bookmarkhandler.h  bookmarkstorage.cpp  bookmarkstorage.h  chatstatefilter.cpp  chatstatefilter.h  chatstatehandler.h  client.cpp  clientbase.cpp  component.cpp  component.h  compressionbase.h  compressiondatahandler.h  compressionzlib.cpp  compressionzlib.h  connectionhandler.h  connectionhttpproxy.cpp  connectionhttpproxy.h  connectionsocks5proxy.cpp  connectionsocks5proxy.h  connectiontcpbase.cpp  connectiontcpclient.cpp  connectiontcpclient.h  connectiontcpserver.cpp  connectiontcpserver.h  dataform.cpp  dataform.h  dataformbase.cpp  dataformbase.h  dataformfield.cpp  (+134 more)
src/NetworkLayer/JabberClient/gloox-0.9/src/examples/: Makefile.am  Makefile.in  adhoc_example.cpp  annotations_example.cpp  bookmarkstorage_example.cpp  component_example.cpp  disco_example.cpp  e2ee_client.cpp  e2ee_server.cpp  flexoff_example.cpp  ft_recv.cpp  ft_send.cpp  ibb_example.cpp  message_example.cpp  muc_example.cpp  privacylist_example.cpp  privatexml_example.cpp  register_example.cpp  reset_example.cpp  roster_example.cpp  vcard_example.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/: Makefile.am  Makefile.in
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/base64/: Makefile.am  Makefile.in  base64_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/chatstatefilter/: Makefile.am  Makefile.in  chatstatefilter_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/client/: Makefile.am  Makefile.in  client_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/clientbase/: Makefile.am  Makefile.in  clientbase_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/dataform/: Makefile.am  Makefile.in  dataform_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/dataformfield/: Makefile.am  Makefile.in  dataformfield_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/delayeddelivery/: Makefile.am  Makefile.in  delayeddelivery_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/gpgencrypted/: Makefile.am  Makefile.in  gpgencrypted_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/gpgsigned/: Makefile.am  Makefile.in  gpgsigned_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/jid/: Makefile.am  Makefile.in  jid_perf.cpp  jid_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/md5/: Makefile.am  Makefile.in  md5_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/messageeventfilter/: Makefile.am  Makefile.in  messageeventfilter_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/oob/: Makefile.am  Makefile.in  oob_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/parser/: Makefile.am  Makefile.in  parser_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/prep/: Makefile.am  Makefile.in  prep_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/search/: Makefile.am  Makefile.in  search_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/sha/: Makefile.am  Makefile.in  sha_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/simanager/: Makefile.am  Makefile.in  simanager_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/stanza/: Makefile.am  Makefile.in  stanza_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/stanzaextensionfactory/: Makefile.am  Makefile.in  stanzaextensionfactory_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/tag/: Makefile.am  Makefile.in  tag_perf.cpp  tag_test.cpp
src/NetworkLayer/JabberClient/gloox-0.9/src/tests/tlsgnutls/: Makefile.am  Makefile.in  tlsgnutls_test.cpp
(+2283 files in other folders)
