##
## Process this file with automake to produce Makefile.in
##

AM_CPPFLAGS = -pedantic -Wall -pipe -W -Wfloat-equal -Wcast-align -Wsign-compare -Wpointer-arith -Wswitch -Wunknown-pragmas -Wconversion -Wundef -Wcast-qual -ansi

noinst_PROGRAMS = register_test disco_test adhoc_test roster_test privatexml_test component_test \
                  bookmarkstorage_test annotations_test privacylist_test message_test flexoff_test \
                  ibb_test vcard_test

register_test_SOURCES = register_test.cpp
register_test_LDADD = ../libgloox.la $(LDFLAGS)
register_test_CFLAGS = $(CPPFLAGS)

disco_test_SOURCES = disco_test.cpp
disco_test_LDADD = ../libgloox.la $(LDFLAGS)
disco_test_CFLAGS = $(CPPFLAGS)

adhoc_test_SOURCES = adhoc_test.cpp
adhoc_test_LDADD = ../libgloox.la $(LDFLAGS)
adhoc_test_CFLAGS = $(CPPFLAGS)

roster_test_SOURCES = roster_test.cpp
roster_test_LDADD = ../libgloox.la $(LDFLAGS)
roster_test_CFLAGS = $(CPPFLAGS)

privatexml_test_SOURCES = privatexml_test.cpp
privatexml_test_LDADD = ../libgloox.la $(LDFLAGS)
privatexml_test_CFLAGS = $(CPPFLAGS)

component_test_SOURCES = component_test.cpp
component_test_LDADD = ../libgloox.la $(LDFLAGS)
component_test_CFLAGS = $(CPPFLAGS)

bookmarkstorage_test_SOURCES = bookmarkstorage_test.cpp
bookmarkstorage_test_LDADD = ../libgloox.la $(LDFLAGS)
bookmarkstorage_test_CFLAGS = $(CPPFLAGS)

annotations_test_SOURCES = annotations_test.cpp
annotations_test_LDADD = ../libgloox.la $(LDFLAGS)
annotations_test_CFLAGS = $(CPPFLAGS)

privacylist_test_SOURCES = privacylist_test.cpp
privacylist_test_LDADD = ../libgloox.la $(LDFLAGS)
privacylist_test_CFLAGS = $(CPPFLAGS)

message_test_SOURCES = message_test.cpp
message_test_LDADD = ../libgloox.la $(LDFLAGS)
message_test_CFLAGS = $(CPPFLAGS)

flexoff_test_SOURCES = flexoff_test.cpp
flexoff_test_LDADD = ../libgloox.la $(LDFLAGS)
flexoff_test_CFLAGS = $(CPPFLAGS)

ibb_test_SOURCES = ibb_test.cpp
ibb_test_LDADD = ../libgloox.la $(LDFLAGS)
ibb_test_CFLAGS = $(CPPFLAGS)

vcard_test_SOURCES = vcard_test.cpp
vcard_test_LDADD = ../libgloox.la $(LDFLAGS)
vcard_test_CFLAGS = $(CPPFLAGS)
